crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__edge_case.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
FA100 [*] Add `from __future__ import annotations` to simplify `typing.List`
 --> edge_case.py:5:13
  |
5 | def main(_: List[int]) -> None:
  |             ^^^^
6 |     a_list: t.List[str] = []
7 |     a_list.append("hello")
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | from typing import List
  |
note: This is an unsafe fix and may change runtime behavior

FA100 [*] Add `from __future__ import annotations` to simplify `typing.List`
 --> edge_case.py:6:13
  |
5 | def main(_: List[int]) -> None:
6 |     a_list: t.List[str] = []
  |             ^^^^^^
7 |     a_list.append("hello")
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | from typing import List
  |
note: This is an unsafe fix and may change runtime behavior
