crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__fa102_no_future_import_uses_union.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
FA102 [*] Missing `from __future__ import annotations`, but uses PEP 585 collection
 --> no_future_import_uses_union.py:6:14
  |
6 | def hello(y: dict[str, int] | None) -> None:
  |              ^^^^^^^^^^^^^^
7 |     del y
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | def main() -> None:
  |
note: This is an unsafe fix and may change runtime behavior

FA102 [*] Missing `from __future__ import annotations`, but uses PEP 604 union
 --> no_future_import_uses_union.py:6:14
  |
6 | def hello(y: dict[str, int] | None) -> None:
  |              ^^^^^^^^^^^^^^^^^^^^^
7 |     del y
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
2 | def main() -> None:
  |
note: This is an unsafe fix and may change runtime behavior
